cambio en sockets a 1 segundo para el cliente, monitor ram en frontend terminado

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BOILERPLATE</title>
+<title>PY1_SOPES1_201213181</title>
 <link rel="icon" type="image/png" href="/images/flash.png"/>
 </head>
 
